  }
}
\section{Changes in version 1.11.21}{
  \itemize{
    \item Fixed bug in vcfWrite to output missing data code for ID
    column
    \item Data cleaning vignette uses createDataFile instead of
    ncdfCreate and ncdfAddData
    \item Data cleaning vignette uses snpgdsOpen and snpgdsClose
  }
}
\section{Changes in version 1.11.22}{
  \itemize{
    \item convertNcdfGds and convertGdsNcdf will convert files with any
    variable names (not just genotype)
  }
}
\section{Changes in version 1.11.31}{
  \itemize{
    \item setMissingGenotypes replaces ncdfSetMissingGenotypes and gdsSetMissingGenotypes
  }
}
\section{Changes in version 1.11.32}{
  \itemize{
    \item imputedDosageFile replaces ncdfImputedDosage and gdsImputedDosage
  }
}
\section{Changes in version 1.11.33}{
  \itemize{
    \item Allow getting variables from sub-nodes in a GDS file (e.g., getVariable(GdsReader, "snp.annot/qual")).
    \item Add getNodeDescription method to GdsReader.
    \item Added examples of converting from PLINK and VCF in Formats vignette.
  }
}
\section{Changes in version 1.13.3}{
  \itemize{
    \item Bug fix in imputedDosageFile - for IMPUTE2, include columns
  from .samples file in output scan annotation.
  }
}
\section{Changes in version 1.13.6}{
  \itemize{
    \item Add getGenotypeSelection to select non-continguous SNPs and scans from GDS files.
  }
}
\section{Changes in version 1.13.7}{
  \itemize{
    \item Add dupDosageCorAcrossDatasets.
    \item Add getGenotypeSelection method to MatrixGenotypeReader.
  }
}
\section{Changes in version 1.13.8}{
  \itemize{
    \item Add drop=TRUE argument to getVariable, etc.
  }
}
\section{Changes in version 1.13.9}{
  \itemize{
    \item Add use.names argument to getGenotype and getGenotype selection
    \item Add order=c("file", "selection") argument to getGenotypeSelection
    \item duplicateDiscordanceAcrossDatasets and dupDosageCorAcrossDatasets will not match on unmapped SNPs
  }
}
