@@ -2,6 +2,10 @@
 \alias{assocTestFisherExact}
 \title{Association tests}
 \description{
+This function is deprecated; it relies on the output from the deprecated \code{\link{assocTestRegression}}.
+Instead, use \code{\link{batchFisherTest}} with the case status variable as \code{batchVar} and \code{return.by.snp=TRUE}.
+Alternatively, use \code{\link{getGenotype}} to extract genotypes and run \code{\link{fisher.test}} directly.
+
 This function performs Fisher's Exact Test using allele counts for cases and controls.  
 It takes the output from \code{\link{assocTestRegression}} as its input.
 }
@@ -62,6 +66,7 @@ assocTestFisherExact(dat, outfile = NULL)
 \seealso{\code{\link{assocTestRegression}}}
 
 \examples{
+\dontrun{
 # The following example would take the output from association tests run on chromosome 22 using assocTestRegression
 # and perform the Fisher's Exact Test on those that were monomorphic in either the cases or the controls.
 # The output would be saved as "chr22test.FisherExact.RData"
@@ -91,5 +96,6 @@ fisher.res <- getobj(outfile)
 head(fisher.res)
 unlink(outfile)
 close(genoData)
+}
 }
 
